k8s/server/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: duckdns
subsets:
  - addresses:
      - ip: 8.8.8.8
    ports:
      - name: noop
        port: 1
